[package]
name = "canutils-lib"
description = "A collection of types for working with CAN bus data"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/JMANN240/canutils-lib"

[dependencies]
bitvec = "1.0.1"
strum = { version = "0.27.2", features = ["derive"] }
ux = "0.1.6"

[dev-dependencies]
claims = "0.8.0"
